welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:17: error: ';' expected but 'for' found.
for (i <- 0 to 6)
^