welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
	var nbPas:Int = 0;
while (!estSurBiscuit()) {
	avance();
	nbPas = nbPas + 1;
}
prendBiscuit();
var aFaire: Int = nbPas;
while (aFaire > 0) {
	recule();
	aFaire = aFaire - 1;
}
poseBiscuit();
	
}for (i <- 0 to 6)
goAndGet(); droite(); avance(); gauche();
